--- a/_includes/components/head.html
+++ b/_includes/components/head.html
@@ -26,6 +26,7 @@
     <meta property="twitter:title" content="{%- include components/title.html -%}">
     <title>{%- include components/title.html -%}</title>
     <link rel="icon" type="image/x-icon" href="{{ icon }}">
+    <link rel="stylesheet" type="text/css" href="/codecraft.css" as="style">
     <link rel="preload" type="text/css" href="{{css}}/style.css" as="style" onload="this.rel='stylesheet'">{% for fontface in site.fonts %}
     <link rel="preload" as="font" type="font/{{ fontface.extension }}" href="{{ font }}/{{ fontface.name }}-{{ fontface.weight }}.{{ fontface.extension }}" crossorigin="anonymous">{% endfor %}
     <link rel="preload" as="script" href="{{js}}/script.js">
@@ -36,82 +37,6 @@
     <link rel="preconnect"   crossorigin="anonymous" href="https://translate.googleapis.com">
     <link rel="canonical" href="{{ folder }}{{ page.url }}">
     <base href="{{folder}}/">
-    <style>
-        {% for fontface in site.fonts %}@font-face {
-            font-family: '{{ fontface.name }}';
-            font-display: swap;
-            font-style: normal;
-            font-weight: {% if fontface.weight == "Regular" %}400{% elsif fontface.weight == "Medium" %}600{% else %}400{% endif %};
-            src: url('{{ font }}/{{ fontface.name }}-{{ fontface.weight }}.{{ fontface.extension }}') format('{{ fontface.extension }}');
-        }{% endfor %}
-        :root {
-            --font-basic:
-            system-ui, -apple-system, blinkmacsystemfont, "Segoe UI", roboto,
-            "Helvetica Neue", arial, sans-serif, "Segoe UI Emoji";
-            {% for fnt in site.fonts %}--font-{{ fnt.type }}: '{{ fnt.name }}';{% endfor %}
-        }
-
-        body,
-        header,
-        main p,
-        main ul,
-        main ol,
-        .search-input {
-            font-family: var(--font-body), var(--font-basic);
-        }
-        main {
-            font-family: var(--font-title), var(--font-basic);
-        }
-
-        #menu,
-        #toc,
-        .hidden,
-        .language-mermaid {
-            visibility: hidden;
-        }
-        .language-mermaid.mermaid-loaded {
-            visibility: visible;
-        }
-
-        @media screen {
-
-            :root {
-                {%- include components/colors.html -%}
-            }
-
-            html {
-                font-size: clamp(17px, 15px + 0.3756vw, 22px);
-                scroll-behavior: smooth;
-                -webkit-text-size-adjust: 100%;
-                text-size-adjust: 100%;
-                tab-size: 4;
-                max-width: 100dvw;
-                overflow-x: hidden;
-            }
-
-            body {
-                color: var(--c0);
-                background-color: var(--c7);
-                display: flex;
-                position: relative;
-                flex-direction: row;
-                margin: 0;
-                top: 0 !important;
-                max-width: 100dvw;
-                overflow-x: hidden;
-                min-height: 100dvh;
-                pointer-events: all;
-            }
-
-            *,
-            ::before,
-            ::after {
-                box-sizing: border-box
-            }
-
-        }
-
-    </style>
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
