--- a/_includes/components/head.html
+++ b/_includes/components/head.html
@@ -26,7 +26,7 @@
     <meta property="twitter:title" content="{%- include components/title.html -%}">
     <title>{%- include components/title.html -%}</title>
     <link rel="icon" type="image/x-icon" href="{{ icon }}">
-    <link rel="stylesheet" type="text/css" href="/codecraft.css" as="style">
+    <link rel="stylesheet" type="text/css" href="{{folder}}/codecraft.css" as="style">
     <link rel="preload" type="text/css" href="{{css}}/style.css" as="style" onload="this.rel='stylesheet'">{% for fontface in site.fonts %}
     <link rel="preload" as="font" type="font/{{ fontface.extension }}" href="{{ font }}/{{ fontface.name }}-{{ fontface.weight }}.{{ fontface.extension }}" crossorigin="anonymous">{% endfor %}
     <link rel="preload" as="script" href="{{js}}/script.js">
