css template variables

--- a/_layouts/style.css
+++ b/_layouts/style.css
@@ -119,9 +119,16 @@ main {
         z-index: 15;
     }
 
-    @media (width >=64rem) {
-        
+    main a[href]:not([href^="#"]):not(main footer a[href]),
+    main a[href]:not([href^="#"]):visited:not(main footer a[href]) {
+        text-decoration: none;
+        color: var(--c8);
     }
-
+    
+    main a[href]:not([href^="#"]):hover:not(main footer a[href]),
+    main a[href]:not([href^="#"]):visited:hover:not(main footer a[href]) {
+        text-decoration: none;
+        color: var(--ca);
+    }
 
 }
