--- a/_layouts/style.css
+++ b/_layouts/style.css
@@ -1,3 +1,35 @@
+main a {
+    text-decoration: none;
+}
+
+#logo-link {
+    text-decoration: none;
+    display: inline-flex;
+    width: fit-content;
+    padding: .5rem;
+    row-gap: .45rem;
+    align-items: center;
+    font-weight: 500;
+}
+    
+#logo {
+    display: flex;
+    align-items: center;
+    column-gap: .3rem;
+    font-size: 1rem;
+}
+
+#menu,
+#toc,
+.hidden,
+.language-mermaid {
+    visibility: hidden;
+}
+
+.language-mermaid.mermaid-loaded {
+    visibility: visible;
+}
+
 {% capture _unused %}
 {% assign domain="https://" | append: site.base.url %}
 {% assign folder=domain | append: "/" | append: site.base.folder %}
@@ -31,16 +63,6 @@ main {
     font-family: var(--font-title), var(--font-basic);
 }
 
-#menu,
-#toc,
-.hidden,
-.language-mermaid {
-    visibility: hidden;
-}
-
-.language-mermaid.mermaid-loaded {
-    visibility: visible;
-}
 
 @media screen {
     :root {
@@ -104,6 +126,10 @@ main {
     main {
         width: 100%;
         position: relative;
+    }
+
+    main a {
+        text-decoration: none;
     }
 
     *,
