--- a/_includes/components/script.html
+++ b/_includes/components/script.html
@@ -69,7 +69,10 @@
 {% if page.mermaid and site.version.mermaid %}
 <script type="module" defer>
     import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@{{ site.version.mermaid }}/+esm';
-    mermaid.initialize({ startOnLoad: true });
+    mermaid.initialize({ 
+        startOnLoad: true,
+        theme: 'forest'
+    });
     mermaid.run({ querySelector: '.language-mermaid' }).then(() => {
         document.querySelectorAll('.language-mermaid').forEach(el => {
             el.classList.add('mermaid-loaded');
