--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,9 +188,8 @@ main ol li {
         hyphens: auto;
         text-wrap: pretty;
         vertical-align: baseline;
-        padding: 0 1.5rem 0 .25rem;
-        text-align: justify;
-    
+        padding: 0 2.5rem 0 .25rem;
+        text-align: justify;    
     }
 
     main p,
@@ -965,8 +964,8 @@ main ol li {
     }
 
     main p a[href^="#"]:focus::before {
-        border-color: var(--c8);
-        color: var(--ca);
+        border-color: var(--ce);
+        color: var(--cd);
     }
 
 
