--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -463,7 +463,7 @@ main ol li {
         font-size: .75rem;
         padding-left: 1ch;
         font-weight: 700;
-        color: var(--ca);
+        color: var(--ce);
     }
 
     .aside-link:hover {
@@ -656,7 +656,7 @@ main ol li {
     }
 
     .search-result:hover .search-result-doc-title {
-        color: var(--ca);
+        color: var(--ce);
     }
 
     main li .highlighter-rouge,
