--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,7 +89,7 @@ main ol li {
         text-align: center;
         font-size: 1.3rem;
         word-spacing: .01vw;
-        color: var(--c2);
+        color: var(--c0);
     }
 
     ::selection {
@@ -742,8 +742,21 @@ main ol li {
                     color: var(--c2);
                 }
 
+        #comments {
+            padding-bottom: 2rem;
+        }
+    
+        #comments-utteranc {
+            padding: 0 .5rem;
+        }
 
     @media (width > 575px) {
+
+
+        #comments-utteranc {
+            padding: 0 1rem;        
+        }
+
 
         main p,
         main ul,
@@ -1254,20 +1267,6 @@ main ol li {
     pre.highlight {
         border: 2px solid var(--ra);
     }
-
-
-    #comments {
-        padding-bottom: 2rem;
-    }
-
-    #comments-utteranc {
-        padding: 0 1rem;
-        filter: grayscale(50%) sepia(10%) hue-rotate(50deg);
-        opacity: .9;
-
-    }
-
-
 
 }
 
