--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -747,7 +747,9 @@ main ol li {
         }
     
         #comments-utteranc {
-            padding: 0 .5rem;
+            padding-left: .1rem;
+            filter: grayscale(50%) sepia(10%) hue-rotate(50deg);
+            opacity: .9;
         }
 
     @media (width > 575px) {
@@ -755,6 +757,7 @@ main ol li {
 
         #comments-utteranc {
             padding: 0 1rem;        
+            
         }
 
 
@@ -978,7 +981,7 @@ main ol li {
 
     .aside-link:focus
     {
-        color:#fff;
+        font-weight:bold;
     }
 
     .dropbtn:focus,
