--- a/_includes/components/head.html
+++ b/_includes/components/head.html
@@ -27,7 +27,7 @@
     <meta property="twitter:title" content="{%- include components/title.html -%}">
     <title>{%- include components/title.html -%}</title>
     <link rel="icon" type="image/x-icon" href="{{ icon }}">
-    <link rel="preload" type="text/css" href="{{css}}/style.css" as="style" onload="this.rel='stylesheet'">{% for fontface in site.fonts %}
+    <link rel="preload" type="text/css" href="{{css}}/codecraft.css" as="style" onload="this.rel='stylesheet'">{% for fontface in site.fonts %}
     <link rel="preload" as="font" type="font/{{ fontface.extension }}" href="{{ font }}/{{ fontface.name }}-{{ fontface.weight }}.{{ fontface.extension }}" crossorigin="anonymous">{% endfor %}
     <link rel="preload" as="script" href="{{js}}/script.js">
     {% for item in site.version %}{% if page[item.first] != false %}<link rel="preload" href="https://cdn.jsdelivr.net/npm/{{ item.first }}@{{ item.last }}/+esm" as="script">{% endif %}{% endfor %}
