--- a/_includes/components/script.html
+++ b/_includes/components/script.html
@@ -1,3 +1,4 @@
+<script src="{{js}}/codecraft.js" async></script>
 <script src="{{js}}/script.js" async></script>
 <script>
     const clipboardHandler = () => {
