--- a/_layouts/codecraft.html
+++ b/_layouts/codecraft.html
@@ -50,6 +50,7 @@
             }{% endif %}
         };
   </script>
+  <script src="{{js}}/codecraft.js" async></script>
   {%- include components/script.html -%}
 </body>
 </html>
