--- a/_includes/components/aside.html
+++ b/_includes/components/aside.html
@@ -9,34 +9,10 @@
   <div id="search-results" class="search-results"></div>
 </div>
 <div class="aside-title">Sections</div>
-{% assign home_page = site.html_pages
-| where: "title", "Home"
-| first %}
-{% if home_page %}
-<a class="aside-link" href="/articles/">{{ home_page.title }}</a>
-{% endif %}
-{% assign pages_top = site.html_pages
-| where_exp:"item", "item.title != nil"
-| where_exp:"item", "item.parent == nil"
-| where_exp:"item", "item.nav_exclude != true"
-| where: "title", "Home"
-| size %}
-{% if pages_top > 0 %}
-{% for item in site.html_pages
-| where_exp:"item", "item.title != nil"
-| where_exp:"item", "item.parent == nil"
-| where_exp:"item", "item.nav_exclude != true" %}
-{% unless item.title == "Home" %}
-<a class="aside-link" href="/articles{{ item.url }}">{{ item.title }}</a>
-{% endunless %}
-{% endfor %}
-{% endif %}
-{% if site.links %}
-<div class="aside-title notranslate">Links</div>
-{% for link in site.links %}
-<a href="{{ link.last }}" class="aside-link" rel="noopener noreferrer">{{ link.first }}</a>
-{% endfor %}
-{% endif %}
+{% assign home_page = site.html_pages | where: "title", "Home" | first %}{% if home_page %}<a class="aside-link" href="/articles/">{{ home_page.title }}</a>{% endif %}
+{% assign pages_top = site.html_pages | where_exp:"item", "item.title != nil" | where_exp:"item", "item.parent == nil" | where_exp:"item", "item.nav_exclude != true" | where: "title", "Home" | size %}{% if pages_top > 0 %} {% for item in site.html_pages | where_exp:"item", "item.title != nil" | where_exp:"item", "item.parent == nil" | where_exp:"item", "item.nav_exclude != true" %}{% unless item.title == "Home" %}<a class="aside-link" href="/articles{{ item.url }}">{{ item.title }}</a>{% endunless %}{% endfor %}{% endif %}
+{% if site.links %}<div class="aside-title notranslate">Links</div>
+{% for link in site.links %}<a href="{{ link.last }}" class="aside-link" rel="noopener noreferrer">{{ link.first }}</a>{% endfor %}{% endif %}
 <div class="dropdown">
   <button class="dropbtn aside-title hidden">Translate &rsaquo;</button>
   <div class="dropdown-lang" style="display:none">
