--- a/_layouts/codecraft.html
+++ b/_layouts/codecraft.html
@@ -31,7 +31,7 @@
         {%- include components/aside.html -%}
     </aside>
     <main>
-        <label for="toc"><div class="icon icon-toc" aria-label="Show Table of Contents"></div></label>
+        {% if page.toc %}<label for="toc"><div class="icon icon-toc" aria-label="Show Table of Contents"></div></label>{% endif %}
         <h1>{{ page.title | capitalize }}</h1>
         <input type="checkbox" aria-expanded="false" id="toc" autocomplete='off'>
         <div id="index"><div id="reading-time"></div><div id="chapters"></div></div>
