--- a/_includes/components/head.html
+++ b/_includes/components/head.html
@@ -18,7 +18,8 @@
     <meta name="description" content="{%- include components/title.html -%}">
     <meta name="license" content="{{ page.license | default: meta.license }}">
     <meta name="robots" content="index, follow">
-    <meta name="search" content="version=@{{ site.version.lunr }}|source=@{{ site.search_file }}">
+    <meta name="search" content="version=@{{ site.version.lunr }}|source=@{{ site.search_file }}">{% if page.toc %}
+    <meta name="toc" content="enabled">{% endif %}
     <meta name="twitter:card" content="summary">{% if page.mermaid %}
     <meta name="mermaid" content="version={{ site.version.mermaid }}">{% endif %}{% if page.comments and site.utteranc.repo %}
     <meta name="comments-config" content="{% for item in site.utteranc %}{{ item.first }}={{ item.last }}{% if forloop.last == false %}|{% endif %}{% endfor %}">{% endif %}
