--- a/_layouts/codecraft.html
+++ b/_layouts/codecraft.html
@@ -41,6 +41,7 @@
             <div id="comments-utteranc" class="notranslate"></div>
         </div>{% endif %}
     </main>
-    <script src="{{js}}/codecraft.js" async></script>
+    <script src="https://cdn.jsdelivr.net/npm/lunr@{{ site.version.lunr }}/lunr.min.js" async></script>
+    <script  src="{{js}}/codecraft.js" async></script>
 </body>
 </html>
